update from DS (1058,1060,1063)
版本: 1063
作者: chihwen
日期: 2013年5月22日 上午 11:47:26
訊息:
針對 POI 外掛 btnText 按鈕文字欄位，加入中文10個字，英數20個字的限制
issue 6367
----
異動 : /fakeapi/epcurate-curation.html
異動 : /fakeapi/javascripts/curation.js

版本: 1060
作者: chihwen
日期: 2013年5月22日 上午 12:01:37
訊息:
調整多選日期邏輯，增加預設日期及時間功能

1. 調整多選日期邏輯，增加預設日期及時間功能。
   預設選定日期為當天，預設時間為19點00分 (若時間大於19點，則日期自動取明天)。
2. 當點選 POI event overlay crumb 連結時，也同時重新清除必填欄位未填提示。
issue 6367
----
異動 : /fakeapi/javascripts/curation.js

版本: 1058
作者: chihwen
日期: 2013年5月21日 下午 10:31:20
訊息:
同步 src 版本 1049,1051 (注意1049尚未完全同步完成)
issue 6367
----
異動 : /fakeapi/stylesheets/lightbox.css

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4750 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/lightbox.css
+++ b/stylesheets/lightbox.css
@@ -460,10 +460,11 @@
 .overlay-l .overlay-container .overlay-wrap .overlay-btn .btns {
 	display: inline-block;
 	width: 67px;
+    margin-right: 13px;
 }
 
-.overlay-l .overlay-container .overlay-wrap .overlay-btn .btns:first-child {
-	margin-right: 13px;
+.overlay-l .overlay-container .overlay-wrap .overlay-btn .btns:last-child {
+	margin-right: 0;
 }
 
 /**
@@ -665,6 +666,81 @@
 .zh .setup-notice .overlay-container .disconnect-notice p.content {
     padding-left: 66px;
     text-align: left;
+}
+
+/**
+*
+* =change-pwd-overlay
+*
+**/
+
+#change-pwd-overlay h4 {
+    margin-bottom: 23px;
+}
+
+#change-pwd-overlay .overlay-btn {
+    width: 246px;
+    margin: 0 auto;
+}
+
+#change-pwd-overlay .change-pwd p.text {
+    width: 243px;
+    height: 31px;
+    margin: 0 auto 10px;
+    padding-left: 3px;
+    background: url(../images/input_box_left_g.png) no-repeat 0 0;
+}
+
+#change-pwd-overlay .change-pwd p.text.last {
+    margin-bottom: 5px;
+}
+
+#change-pwd-overlay .change-pwd p.text span {
+    display: block;
+}
+
+#change-pwd-overlay .change-pwd p.text span.input-right {
+    padding-right: 3px;
+    background: url(../images/input_box_right_g.png) no-repeat right 0;
+}
+
+#change-pwd-overlay .change-pwd p.text span.input-middle {
+    background: url(../images/input_box_middle_g.png) repeat-x;
+}
+
+#change-pwd-overlay .change-pwd span .text {
+    width: 216px;
+    height: 31px;
+    padding-left: 24px;
+    border: none;
+    background: url(../images/icon_password.png) no-repeat 3px 8px;
+    color: #555;
+    font: 13px/30px Arial, Helvetica;
+}
+
+#change-pwd-overlay .change-pwd .notice {
+    padding-left: 92px;
+    color: #f00;
+    font-size: 13px;
+    text-align: left;
+}
+
+#change-pwd-overlay .overlay-btn {
+    left: 50%;
+    margin-left: -123px;
+}
+
+#change-pwd-overlay .overlay-btn .btn-cancel {
+    float: left;
+}
+
+#change-pwd-overlay .overlay-btn .btn-chg-pwd {
+    float: right;
+    width: 135px;
+}
+
+#change-pwd-overlay .overlay-btn .btn-chg-pwd a {
+    width: 132px;
 }
 
 /**
