--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -638,10 +638,9 @@ background: #e4e4e4;
 	color: #999;
 }
 
-#studio-nav .studio-nav-wrap ul li.on    span a {
+#studio-nav .studio-nav-wrap ul li.on span a {
    	cursor: default;
 }
-
 
 #studio-nav .studio-nav-wrap .studio-setup {
     position: relative;
@@ -715,15 +714,18 @@ background: #e4e4e4;
     text-align: center;
 }
 
-#studio-nav .studio-nav-wrap .studio-setup .btn-left:hover {
+#studio-nav .studio-nav-wrap .studio-setup .btn-left:hover,
+#studio-nav .studio-nav-wrap .studio-setup.click .btn-left {
     background: url(../images/popup_btn_left_press.png) no-repeat 0 0;
 }
 
-#studio-nav .studio-nav-wrap .studio-setup .btn-left:hover .btn-right {
+#studio-nav .studio-nav-wrap .studio-setup .btn-left:hover .btn-right,
+#studio-nav .studio-nav-wrap .studio-setup.click .btn-left .btn-right {
     background: url(../images/popup_btn_right_press.png) no-repeat right 0;
 }
 
-#studio-nav .studio-nav-wrap .studio-setup .btn-left:hover .btn-middle {
+#studio-nav .studio-nav-wrap .studio-setup .btn-left:hover .btn-middle,
+#studio-nav .studio-nav-wrap .studio-setup.click .btn-left .btn-middle {
     background: url(../images/popup_btn_middle_press.png) repeat-x;
 }
 
@@ -1048,7 +1050,7 @@ background: #e4e4e4;
 
 #title-func .caption .scheduled-time,
 #title-func .caption .publish-time {
-    width: 155px;
+    width: 140px;
 }
 
 #title-func .caption .views {
@@ -1358,4 +1360,196 @@ padding: 4px 10px 0;
 #studio-nav .studio-nav-wrap h3 .sub-title {
 	font-size: 11px;
 	font-weight: normal;	
+}
+
+/* Tip White */
+.tip-white-l {
+  	font-size: 13px;
+}
+.tip-white-l .left {
+	position: relative;
+	float: left;
+	width: 7px;
+	height: 92px;
+	background: url(../images/bg_tip_l.png) no-repeat 0 0;
+}
+.tip-white-l .right {
+  	position: relative;
+  	float: left;
+  	width: 7px;
+  	height: 92px;
+	background: url(../images/bg_tip_l.png) no-repeat 0 -92px;
+}
+.tip-white-l .center {
+  	position: relative;
+  	float: left;
+  	height: 92px;
+  	white-space: nowrap;
+	background: url(../images/bg_tip_l.png) repeat-x 0 -184px;
+  	padding: 7px 0 0;
+  	text-align: center;
+}
+.tip-white-l .title {
+	font-weight: bold;	
+	float: left;
+	height: 30px;
+	line-height: 30px;
+	text-align: left;
+}
+
+/* Dropdown Gray */
+.select-gray {
+	position: relative;
+	float: left;
+	width: 125px;
+	height: 30px;
+	margin-right: 4px;
+	padding-left: 3px;
+	text-align: left;
+	background: url(../images/input_gray.png) no-repeat;
+}
+.select-content-gray {
+	overflow: hidden;
+	height: 30px;
+	padding: 0 3px 0 0;
+    background: url(../images/input_gray.png) no-repeat right -30px;
+	margin:0;
+}
+.select-btn {
+	padding: 0;
+	width: 22px;
+	height: 23px;
+	background: url(../images/btns.png) 0 -400px no-repeat;
+	position: absolute;
+	top: 3px;
+	right: 5px;
+	z-index: 55;
+	cursor: pointer;
+	margin:0;
+}
+.select-btn:hover, .select-btn.on {
+	background: url(../images/btns.png) 0 -451px no-repeat;
+}
+.select-txt-gray {
+	overflow: hidden;
+	height: 30px;
+	background: url(../images/input_gray.png) repeat-x 0 -60px;
+	font-size: 13px;
+	line-height: 30px;
+	white-space: nowrap;
+	text-indent: 5px;
+	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+	-ms-text-overflow: ellipsis;
+	-moz-binding: url('ellipsis.xml#ellipsis');
+	color: #555;
+	margin:0;
+	padding: 0 0 0 3px;
+}
+.select-dropdown {
+	display: none;
+	position: absolute;
+	top: 27px;
+	border: 1px solid #B2B2B2;
+	border-bottom: none;
+	-moz-border-radius: 0 0 5px 5px;
+	-webkit-border-radius: 0 0 5px 5px;
+	border-radius: 0 0 5px 5px;
+	filter: alpha(Opacity=90);
+	opacity: 0.9;
+	z-index: 75;
+	left: 0px;
+	width: 126px;
+}
+.select-dropdown li {
+	padding: 0 9px;
+    height: 27px;
+	font-size: 13px;
+	line-height: 27px;
+	background: #d2d2d2;
+	border-top: #f5f5f5 1px solid;
+	border-bottom: #c9c9c9 1px solid;
+	cursor: pointer;
+}
+.select-dropdown li:first-child {
+	border-top: none;
+}
+.select-dropdown li:hover {
+	background: #e4e4e4;
+	color: #999;
+	cursor: pointer;
+}
+.select-dropdown li.on {
+	background: #e4e4e4;
+	color: #999;
+	cursor: default;
+}
+.select-dropdown.on {
+	display: block;
+}
+
+/* Input Gray */
+.input-gray {
+  height: 30px;
+  position:relative;
+  margin:0 8px 0 0;
+}
+.input-gray .left {
+  position: relative;
+  float: left;
+  width: 3px;
+  height: 30px;
+  background: url(../images/input_gray.png) no-repeat;
+}
+.input-gray .right {
+  position: relative;
+  float: left;
+  width: 3px;
+  height: 30px;
+  background: url(../images/input_gray.png) no-repeat 0 -30px;
+}
+.input-gray .center {
+  position: relative;
+  float: left;
+  height: 30px;
+  line-height: 30px;
+  text-indent:6px;
+  background: url(../images/input_gray.png) repeat-x 0 -60px;
+  text-align:left;
+  border: 0;
+  color: #555;
+}
+.textfield {
+  background:none;
+  border:0;
+  top:5px;
+  color: #555;
+  position:absolute;
+}
+
+/* Get URL */
+.get-url .tip-white-l .center {	
+	width: 186px;
+}
+.get-url .tip-white-l .title {	
+	width: 45px; 
+	margin: 5px 0 0 5px;
+}
+.get-url .input-gray {
+	float: left;
+	margin: 5px 0 0 0;
+}
+.get-url .input-gray .center {
+    width: 122px;
+	text-align: left;
+}
+.get-url .input-gray .center .textfield {
+    width: 110px;
+	text-align: left;
+}
+.get-url .select-gray {
+	margin: 5px 0 0 0;
+}
+.get-url .input-gray .center {
+    height: 25px;
 }
