--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -503,13 +503,13 @@ body.mac #title-func h2 {
     height: 30px;
     margin-right: 10px;
     padding-left: 3px;
-    background: url(../images/bg_input.png) no-repeat 0 0;
+    background: url(../images/input_white.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield p.text span {
     display: block;
     padding-right: 3px;
-    background: url(../images/bg_input.png) no-repeat right -30px;
+    background: url(../images/input_white.png) no-repeat right -30px;
 }
 
 #content-main-wrap form .fminput .fmfield p.text span .text {
@@ -517,7 +517,7 @@ body.mac #title-func h2 {
     height: 30px;
     padding-left: 4px;
     border: none;
-    background: url(../images/bg_input.png) repeat-x 0 -60px;
+    background: url(../images/input_white.png) repeat-x 0 -60px;
     color: #555;
     font: 13px/30px Arial, Helvetica;
 }
@@ -528,19 +528,20 @@ body.mac #title-func h2 {
     height: 92px;
     margin-right: 10px;
     padding-left: 3px;
-    background: url(../images/bg_input_lg.png) no-repeat 0 0;
+    background: url(../images/input_white_lg.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span {
     display: block;
     padding-right: 3px;
-    background: url(../images/bg_input_lg.png) no-repeat right -92px;
+    background: url(../images/input_white_lg.png) no-repeat right -92px;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span span {
     height: 92px;
     padding: 0;
-    background: url(../images/bg_input_lg.png) repeat-x 0 -184px;
+    background-repeat: repeat-x;
+    background-position: 0 -184px;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span .textarea {
@@ -611,7 +612,7 @@ body.mac #title-func h2 {
 	height: 30px;
     margin-right: 10px;
     padding-left: 3px;
-    background: url(../images/bg_input.png) no-repeat 0 0;
+    background: url(../images/input_white.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield .select.disable {
@@ -651,7 +652,7 @@ body.mac #title-func h2 {
     overflow: hidden;
     height: 30px;
     padding: 0 3px 0 0;
-    background: url(../images/bg_input.png) no-repeat right -30px;
+    background: url(../images/input_white.png) no-repeat right -30px;
     font-size: 13px;
     line-height: 29px;
     white-space: nowrap;
@@ -670,7 +671,7 @@ body.mac #title-func h2 {
     display: block;
     height: 30px;
     padding-right: 4px;
-    background: url(../images/bg_input.png) repeat-x 0 -60px;
+    background: url(../images/input_white.png) repeat-x 0 -60px;
     color: #555;
     text-decoration: none;
 }
