--- a/stylesheets/ep-curation.css
+++ b/stylesheets/ep-curation.css
@@ -237,7 +237,7 @@ p.auto-height {
 	height: 30px;
     margin-right: 10px;
     padding-left: 3px;
-    background: url(../images/bg_input.png) no-repeat 0 0;
+    background: url(../images/input_white.png) no-repeat 0 0;
 }
 
 #epcurate-curation .tab-content ul.yt-category li .select .select-btn {
@@ -256,7 +256,7 @@ p.auto-height {
     overflow: hidden;
     height: 30px;
     padding: 0 3px 0 0;
-    background: url(../images/bg_input.png) no-repeat right -30px;
+    background: url(../images/input_white.png) no-repeat right -30px;
     font-size: 13px;
     line-height: 30px;
     white-space: nowrap;
@@ -271,7 +271,7 @@ p.auto-height {
     display: block;
     height: 30px;
     padding-right: 4px;
-    background: url(../images/bg_input.png) repeat-x 0 -60px;
+    background: url(../images/input_white.png) repeat-x 0 -60px;
     color: #555;
     text-decoration: none;
 }
@@ -1352,7 +1352,7 @@ p.auto-height {
 	height: 30px;
     margin-right: 10px;
     padding-left: 3px;
-    background: url(../images/bg_input.png) no-repeat 0 0;
+    background: url(../images/input_white.png) no-repeat 0 0;
 }
 
 #epcurate-curation #cur-edit .select .select-btn {
@@ -1376,7 +1376,7 @@ p.auto-height {
 	position: relative;
     height: 30px;
     padding: 0 3px 0 0;
-    background: url(../images/bg_input.png) no-repeat right -30px;
+    background: url(../images/input_white.png) no-repeat right -30px;
     font-size: 13px;
     line-height: 30px;
     white-space: nowrap;
@@ -1391,7 +1391,7 @@ p.auto-height {
     display: block;
     height: 30px;
     padding-right: 4px;
-    background: url(../images/bg_input.png) repeat-x 0 -60px;
+    background: url(../images/input_white.png) repeat-x 0 -60px;
     color: #555;
     text-decoration: none;
 }
@@ -2456,17 +2456,17 @@ p.auto-height {
 #storyboard .storyboard-list ul li p.img {
     position: relative;
     overflow: hidden;
-    width: 100px;
-    height: 65px;
-    margin-bottom: 3px;
-    background: url(../images/thumbnail_box_sm.png) no-repeat 0 0;
-    margin: -4px 0 0 -4px;
+    width: 94px;
+    height: 59px;
+    margin: -1px 0 3px -1px;
+    background-color: #fff;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3), 0px 0px 4px rgba(255, 255, 255,0.3) inset;
 	cursor: move;
 }
 
 #storyboard .storyboard-list ul li p.img img {
     display: block;
-    margin: 10px 0 0 10px;
+    margin: 7px 0 0 7px;
 }
 
 #storyboard .storyboard-list ul li:hover p.img img {
@@ -2479,8 +2479,8 @@ p.auto-height {
 #storyboard .storyboard-list ul li p.img span.time {
     display: block;
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    bottom: 7px;
+    right: 7px;
     float: right;
     height: 14px;
     margin: 0;
