--- a/stylesheets/epcurate.css
+++ b/stylesheets/epcurate.css
@@ -416,13 +416,13 @@
     height: 30px;
     margin: 0 10px 10px 0;
     padding-left: 3px;
-    background: url(../images/bg_input.png) no-repeat 0 0;
+    background: url(../images/input_white.png) no-repeat 0 0;
 }
 
 #content-wrap form .fminput .fmfield p.text span {
     display: block;
     padding-right: 3px;
-    background: url(../images/bg_input.png) no-repeat right -30px;
+    background: url(../images/input_white.png) no-repeat right -30px;
 }
 
 #content-wrap form .fminput .fmfield p.text span .text {
@@ -430,7 +430,7 @@
     height: 30px;
     padding-left: 2px;
     border: none;
-    background: url(../images/bg_input.png) repeat-x 0 -60px;
+    background: url(../images/input_white.png) repeat-x 0 -60px;
     color: #555;
     font-family: Arial, Helvetica;
     font-size: 13px;
@@ -463,19 +463,20 @@
     height: 92px;
     margin: 0 10px 10px 0;
     padding-left: 3px;
-    background: url(../images/bg_input_lg.png) no-repeat 0 0;
+    background: url(../images/input_white_lg.png) no-repeat 0 0;
 }
 
 #content-wrap form .fminput .fmfield p.textarea span {
     display: block;
     padding-right: 3px;
-    background: url(../images/bg_input_lg.png) no-repeat right -92px;
+    background: url(../images/input_white_lg.png) no-repeat right -92px;
 }
 
 #content-wrap form .fminput .fmfield p.textarea span span {
     height: 92px;
     padding: 0;
-    background: url(../images/bg_input_lg.png) repeat-x 0 -184px;
+    background-repeat: repeat-x;
+    background-position: 0 -184px;
 }
 
 #content-wrap form .fminput .fmfield p.textarea span .textarea {
@@ -658,7 +659,7 @@
 	height: 30px;
     margin-right: 10px;
     padding-left: 3px;
-    background: url(../images/bg_input.png) no-repeat 0 0;
+    background: url(../images/input_white.png) no-repeat 0 0;
 }
 
 #content-wrap form .fminput .fmfield .select.disable {
@@ -686,7 +687,7 @@
     overflow: hidden;
     height: 30px;
     padding: 0 3px 0 0;
-    background: url(../images/bg_input.png) no-repeat right -30px;
+    background: url(../images/input_white.png) no-repeat right -30px;
     font-size: 13px;
     line-height: 30px;
     white-space: nowrap;
@@ -705,7 +706,7 @@
     display: block;
     height: 30px;
     padding-right: 4px;
-    background: url(../images/bg_input.png) repeat-x 0 -60px;
+    background: url(../images/input_white.png) repeat-x 0 -60px;
     color: #555;
     text-decoration: none;
 }
