--- a/stylesheets/lightbox.css
+++ b/stylesheets/lightbox.css
@@ -1137,6 +1137,10 @@ body.from-poi-edit-mode #poi-event-overlay .wrap .content .func ul li.notice {
     background: url(../images/icon_info.png) no-repeat 0 0;
 }
 
+.zh #poi-event-overlay .wrap .content .video-wrap .mask .no-video {
+    width: 170px;
+}
+
 /**
 *
 * =event-input
