update from DS (1110,1113,1114,1116,1119,1121~1123,1126,1128~1133,1135,1138~1144)
版本: 1144
作者: chihwen
日期: 2013年6月13日 下午 02:56:24
訊息:
將 alert 改為 nn.log 避免直接輸出除錯訊息
issue 6337
----
異動 : /fakeapi/javascripts/channel.js
異動 : /fakeapi/javascripts/curation.js
異動 : /fakeapi/javascripts/epcurate.js
異動 : /fakeapi/javascripts/episode.js

版本: 1143
作者: chihwen
日期: 2013年6月13日 下午 02:46:11
訊息:
將 index 頁專用的 js 從 channel.js 抽取出來獨立為 index.js
issue 6337
----
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/channel.js
已加入 : /fakeapi/javascripts/index.js

版本: 1142
作者: chihwen
日期: 2013年6月13日 下午 12:55:14
訊息:
1. 將 9x9 production SVN 版本 4840,4841,4883,4884,4885 轉回 fakeapi 分支。
2. 將 index 及 episode-list 頁中，相關 Get URL 共用腳本，獨立集中放到 get-url.js 中。
3. 修正 production SVN 版本 4794 (controller.js, channel.js) 移除用不到的 code 以便通過 JSLint 檢查。
issue 5927
----
異動 : /fakeapi/channel-add.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/episode-list.html
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/channel.js
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/javascripts/episode.js
已加入 : /fakeapi/javascripts/get-url.js
異動 : /fakeapi/lang/en.json
異動 : /fakeapi/lang/zh.json
異動 : /fakeapi/stylesheets/portal.css

版本: 1140
作者: chihwen
日期: 2013年6月12日 上午 12:07:37
訊息:
1. 同步採用 9x9 給的 unplayable video 邏輯，但詳細無效影音呈現規格待 PM 重新 review。
   信件主旨：Re: Remove format= and orderby= from Youtube data API to avoid hitting cache
   寄件日期：2013/6/6 (星期四) 上午 10:36
   if (y.accessControl.embed === 'denied'
       || y.accessControl.syndicate === 'denied'
       || (y.status && !(y.status.reason && y.status.reason === 'limitedSyndication'))) {
2. 修正 #poi-event-overlay 區塊產生錯誤快取問題。
3. 將 POI 相關腳本及樣式引入都移到最上面。
issue 6423
----
異動 : /fakeapi/channel-poi.html
異動 : /fakeapi/epcurate-curation.html
異動 : /fakeapi/javascripts/channel-poi.js
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/javascripts/curation.js

版本: 1139
作者: chihwen
日期: 2013年6月11日 下午 09:58:25
訊息:
1. 將 jQuery 升級為 v1.10.1、jQuery UI 升級為 v1.10.3。
2. 調整 config.js 利用 nn.load

--- a/stylesheets/channel-poi.css
+++ b/stylesheets/channel-poi.css
@@ -9,13 +9,14 @@
 }
 
 #content-main #title-func h2 {
-    display: none;
+    visibility: hidden;
 }
 
 #content-main.poi-list #title-func h2.poi-list,
 #content-main.poi-edit #title-func h2.poi-edit,
 #content-main.poi-create #title-func h2.poi-create {
-    display: block;
+    display: block !important;
+    visibility: visible;
 }
 
 #title-func h2 em {
