--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -893,7 +893,7 @@ background: #e4e4e4;
 
 #content-wrap {
     position: absolute;
-    top: 103px;
+    top: 94px;
     left: 0;
     z-index: 49;
     overflow: hidden;
@@ -1354,10 +1354,8 @@ padding: 4px 10px 0;
 	font-weight: bold;
 }
 #studio-nav .studio-nav-wrap h3 .sub-title {
-    display: block;
 	font-size: 11px;
-	font-weight: normal;
-    line-height: 16px;
+	font-weight: normal;	
 }
 
 /* Tip White */
@@ -1511,7 +1509,6 @@ padding: 4px 10px 0;
   float: left;
   height: 30px;
   line-height: 30px;
-  text-indent:6px;
   background: url(../images/input_gray.png) repeat-x 0 -60px;
   text-align:left;
   border: 0;
@@ -1523,6 +1520,7 @@ padding: 4px 10px 0;
   top:5px;
   color: #555;
   position:absolute;
+  padding: 0 0 0 6px;
 }
 
 /* Get URL */
