update from DS (1190,1194,1198)
版本: 1198
作者: chihwen
日期: 2013年6月21日 下午 06:10:35
訊息:
同步 src2 版本 1196 (調整拼錯字的 css)
issue 6367
----
異動 : /fakeapi/stylesheets/epcurate.css

版本: 1194
作者: chihwen
日期: 2013年6月21日 下午 05:35:53
訊息:
修正全新節目時，多筆POI新增重覆問題
issue 6367
----
異動 : /fakeapi/javascripts/curation.js

版本: 1190
作者: chihwen
日期: 2013年6月21日 下午 02:18:52
訊息:
將 teltel_ui 版本 1187 合併回 fakeapi 分支
issue 5927
----
異動 : /fakeapi/stylesheets/style.css

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4940 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/epcurate.css
+++ b/stylesheets/epcurate.css
@@ -560,7 +560,7 @@
 }
 
 #content-wrap form .fminput .fmfield .img-list ul li {
-    position: releative;
+    position: relative;
     overflow: hidden;
     width: 126px;
     height: 77px;
